--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Create.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FilRouge.Web.Models.QuestionViewModel
+﻿@model FilRouge.Model.Models.QuestionModel
 
 @{
     ViewBag.Title = "Create";
@@ -6,8 +6,7 @@
 
 <h2>View</h2>
 
-@*JE NE TRANSPORTE PAS LES ID DES DIFFICULTé ETC... 
-JE DOIT POUVOIR ENREGISTRER UNE QUESTION EN RENSEIGNANT LA DIFFULCTEE PAR SON ID.*@
+
 
 
 
