--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FilRouge.Web.Models.QuestionViewModel
+﻿@model FilRouge.Model.Models.QuestionModel
 
 @{
     ViewBag.Title = "Details";
@@ -6,7 +6,9 @@
 
 <h2>Question - Detail</h2>
 <hr />
-<h3> @Html.DisplayFor(modelItem => modelItem.Content)</h3>
+<h3> @Html.DisplayFor(modelItem => modelItem.Content)</h3><br/>
+@Html.DisplayFor(modelItem => modelItem.Technology)
+
 
 <table class="table table-dark table-hover">
     <tr>
@@ -19,15 +21,15 @@
 
         @foreach (var reponse in Model.Reponses)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => reponse.Content)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => reponse.TrueReponse)
-                </td>
-            </tr>
-        }
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => reponse.Content)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => reponse.IsTrue)
+            </td>
+        </tr>
+    }
     </table>
     <p>
         @Html.ActionLink("Back to List", "Index")
