--- a/AppFilRougeLibrary/FilRouge.Web/Views/Quizz/_question.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Quizz/_question.cshtml
@@ -1,4 +1,4 @@
-﻿@model FilRouge.Web.Models.QuestionViewModel
+﻿@model FilRouge.Model.Models.QuestionModel
 
 
 <h3> id: @Html.DisplayFor(modelItem => modelItem.QuestionId)</h3>
