--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
@@ -1,64 +1,45 @@
-﻿@model ICollection<FilRouge.Model.Models.QuestionModel>
+﻿@model IEnumerable<FilRouge.Model.Models.QuestionModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "View1";
 }
 
-<h2>Index</h2>
+<h2>View1</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table table-dark table-hover">
+<table class="table">
     <tr>
         <th>
-            Detail
+            @Html.DisplayNameFor(model => model.QuestionId)
         </th>
         <th>
-            Technology
+            @Html.DisplayNameFor(model => model.Content)
         </th>
         <th>
-            Level
+            @Html.DisplayNameFor(model => model.Comment)
         </th>
-        <th>
-            Content
-        </th>
-        <th>
-            Type
-        </th>
-        <th>
-            Active
-        </th>
+        <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                <a href='@Url.Action("Details", "Question", new { id=item.QuestionId})'>
-                    <span class="glyphicon glyphicon-search"></span>
-                </a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Technology)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Difficulty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.QuestionId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.QuestionId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.QuestionId })
-            </td>
-        </tr>
-    }
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.QuestionId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Content)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Comment)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+        </td>
+    </tr>
+}
+
 </table>
