--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FilRouge.Model.Models.QuestionModel>
 
 @{
-    ViewBag.Title = "View1";
+    ViewBag.Title = "Index";
 }
 
 <h2>View1</h2>
