--- a/AppFilRougeLibrary/FilRouge.Web/Content/bootstrap.css
+++ b/AppFilRougeLibrary/FilRouge.Web/Content/bootstrap.css
@@ -7,6 +7,12 @@
  *
  * Designed and built with all the love in the world by @mdo and @fat.
  */
+.hidepanel {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
