--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FilRouge.Model.Models.QuestionModel
+﻿@model FilRouge.Web.Models.QuestionModels
 
 @{
     ViewBag.Title = "Details";
@@ -36,14 +36,14 @@
             Bonne Réponse
         </th>
     </tr>
-    @foreach (var reponse in Model.Reponses)
+    @foreach (var response in Model.Reponses)
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => reponse.Content)
+                @Html.DisplayFor(modelItem => response.Content)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => reponse.IsTrue)
+                @Html.DisplayFor(modelItem => response.IsTrue)
             </td>
         </tr>
     }
