--- a/AppFilRougeLibrary/FilRouge.Web/Views/Shared/_Layout.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Question", "Index", "Question")</li>
+                    <li>@Html.ActionLink("Technology", "Index", "Technology")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
