--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Details.cshtml
@@ -36,7 +36,7 @@
             Bonne Réponse
         </th>
     </tr>
-    @foreach (var response in Model.Reponses)
+    @foreach (var response in Model.Responses)
     {
         <tr>
             <td>
