--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Index.cshtml
@@ -46,10 +46,10 @@
             @*</a>*@
         </td>
         <td>
-            @Html.DisplayFor(modelItem => question.Difficulty.Name)
+            @Html.DisplayFor(modelItem => question.DifficultyName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => question.Technology.Name)
+            @Html.DisplayFor(modelItem => question.TechnologyName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => question.IsEnable)
