auth : creation + connection ok manque manageController...
gestion alert (front)... (manque service dans les controller techno et question)

--- a/AppFilRougeLibrary/FilRouge.Web/Views/Manage/Index.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model FilRouge.Web.Models.IndexViewModel
+﻿@*@*@model FilRouge.Web.Models.IndexViewModel
 @{
     ViewBag.Title = "Gérer";
 }
@@ -84,4 +84,4 @@
                 }*@
         </dd>
     </dl>
-</div>
+</div>*@*@
