--- a/AppFilRougeLibrary/FilRouge.Web/Views/Technology/Edit.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Technology/Edit.cshtml
@@ -5,14 +5,20 @@
 }
 
 <h2>Technology - Edit</h2>
-
+<p>
+    @if (ViewBag.alert != null)
+    {
+        <div class="alert alert-success" id ="alert">
+            @ViewBag.alert
+        </div>
+    }
+</p>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>TechnologyModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -50,8 +56,6 @@
         </div>
     </div>
 }
-
-@ViewBag.alert
     
 <div>
     @Html.ActionLink("Back to List", "Index")
