--- a/AppFilRougeLibrary/FilRouge.Web/Views/Technology/Index.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Technology/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Technology - Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Ajouter une technologie", "Create")
 </p>
 <p>
     @if (ViewBag.alert != null)
@@ -16,7 +16,6 @@
             @ViewBag.alert
         </div>
     }
-
 </p>
 <table class="table">
     <tr>
