--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Edit.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Edit.cshtml
@@ -7,10 +7,10 @@
 <h2>Question - Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("actionName", "controllerName", FormMethod.Post, new { id = "response_form", @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>QuestionModels</h4>
         <hr />
@@ -72,8 +72,61 @@
                 @Html.ValidationMessageFor(model => model.DifficultyName, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <hr>
         <div class="form-group">
+            <div class="col-sm-10">
+                <a id="add">ajouter une réponse</a>
+                <br><br>
+            </div>
+        </div>
+        <div class="form-group" id="to_clone">
+            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="input-group">
+
+                    @Html.Editor("response.Content", new { htmlAttributes = new { @class = "form-control", id = "" } })
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" name="del">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Entrez votre réponse" name="reponse" style="border-color:red">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button" name="del">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+            </span>
+        </div>
+
+        <div class="form-group" id="title">
+            <div class="col-xs-7 col-md-9">
+                Les différentes propositions
+            </div>
+            <div class="col-xs-5 col-md-3" style="text-align: center">
+                <p>Bonne(s) réponses</p>
+            </div>
+        </div>
+        <script type="text/javascript">var i = '@Model.Responses.Count()';</script>
+
+
+        @foreach (var response in Model.Responses)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+
+                    @Html.EditorFor(model => response.Content, new { htmlAttributes = new { @class = "form-control" } })
+                    <button class="btn btn-default" type="button" name="del">x</button>
+
+                </div>
+            </div>
+        }
+
+        <div class="form-group" id="submitquestionedit">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
