--- a/AppFilRougeLibrary/FilRouge.Web/Views/Question/Edit.cshtml
+++ b/AppFilRougeLibrary/FilRouge.Web/Views/Question/Edit.cshtml
@@ -30,7 +30,7 @@ GERER LES LABELS DES REPONSES (BESOIN D'UN ID DYNAMIC POUR LE FOR DU LABEL*@
     <div class="form-group">
         @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextAreaFor(model => model.Content,  new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
         </div>
     </div>
