--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
@@ -1,1 +1,12 @@
 
+<div class="container">
+   <div class="row">
+       <div class="col-12">
+           <div class="quizz-container">
+                <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="background-color: #8d2a2a86;" id="navbar-quizz">
+               
+                </nav>
+           </div>    
+       </div>
+   </div> 
+</div>
