--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
@@ -4,7 +4,10 @@
        <div class="col-12">
            <div class="quizz-container">
                 <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="background-color: #8d2a2a86;" id="navbar-quizz">
-               
+                    <ul class="navbar nav" id="navbar-content">
+                        <li class="nav-item "></li>
+                        <li class="nav-item">{{Date}}</li>
+                    </ul>
                 </nav>
            </div>    
        </div>
