--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/reponses/reponses.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/reponses/reponses.component.html
@@ -1,8 +1,8 @@
-<div class="panel-body">
-  <li>{{ReponseContent}}</li>
+<!-- <div class="panel-body">
+  <li>{{ReponseContent}}Reponse</li>
   <li><div class="btn-group" data-toggle="buttons">
     <label class="btn btn-light active">
       <input type="checkbox" name="" id="" checked autocomplete="off">
     </label>   
   </div></li>
-</div>
+</div> -->
