--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
@@ -18,7 +18,7 @@
       </div>
         <ul class="navbar nav" id="navbar-content">
           <li class="nav-item ">Passage du quizz</li>
-          <li class="nav-item">{{ today | date:'dd-mmmm-yyyy' }}Date</li>
+          <li class="nav-item">{{ today | date:'dd-MMMM-yyyy' }}</li>
         </ul>
         
     </nav>
