--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
@@ -6,23 +6,23 @@
                 <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="color:#15232c;background-color: rgb(221, 149, 116);" id="navbar-quizz">
                     <ul class="navbar nav" id="navbar-content">
                         <div class="col-3">
-                            <li class="nav-item ">{{UserLastName}}LastName</li>
+                            <li class="nav-item ">{{UserLastName}}</li>
                         </div>                   
                         <div class="col-3">
-                            <li class="nav-item">{{UserFirstName}}FirstName</li>
+                            <li class="nav-item">{{UserFirstName}}</li>
                         </div>
                         <div class="col-3">
-                            <li class="nav-item ">{{Technology}}Technology</li>
+                            <li class="nav-item ">{{Technology}}</li>
                         </div>
-                        <div class="col-3">
-                            <li class="nav-item">{{Timer}}Timer</li>
-                        </div>                       
+                        <!-- <div class="col-3">
+                            <li class="nav-item">{{Minutes}}:{{Secondes}}</li>
+                        </div>                        -->
                     </ul>
                 </nav>
                 <div class="panel-group">               
-                            <app-questionsreponses >
+                             <!-- <app-questionsreponses >
 
-                            </app-questionsreponses>
+                            </app-questionsreponses> -->
                 </div>
            </div>    
        </div>
