--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/png" href="../assets/Images/FilRouge.png" 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
@@ -15,6 +15,7 @@
     <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="background-color: #15232c;color:rgb(221, 149, 116)">
       <div class="navbar-brand">
         FilRouge - M2I
+        <img src="../assets/Images/FilRouge.png" class="img-fluid rounded-circle|" alt="" id"nav-image">
       </div>
         <ul class="navbar nav" id="navbar-content">
           <li class="nav-item ">Passage du quizz</li>
