--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
@@ -5,7 +5,8 @@
     <title>FilRouge</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-t
+    o-fit=no">
     <link rel="icon" type="image/png" href="../assets/Images/FilRouge.png" 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
