--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/styles.scss
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/styles.scss
@@ -27,8 +27,9 @@
    align-content: center;
 }
 
-//QuestionReponse container
-.questionsreponsesContainer
+//Nav timer
+#timer
 {
-    
+    color: rgb(85, 61, 61);
+    font-size: 150%;
 }
