--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/app.component.html
@@ -7,16 +7,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-t
     o-fit=no">
-    <link rel="icon" type="image/png" href="../assets/Images/FilRouge.png" 
+    <!-- <link rel="icon" type="image/png" href="../assets/Images/FilRouge.png"> -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="background-color: #15232c;color:rgb(221, 149, 116)">
+    <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="background-color: #312121;color:rgb(241, 239, 238)">
       <div class="navbar-brand">
         FilRouge - M2I
-        <img src="../assets/Images/FilRouge.png" class="img-fluid rounded-circle|" alt="" id"nav-image">
+        <!-- <img src="../assets/Images/FilRouge.png" class="img-fluid rounded-circle|" alt="" id"nav-image"> -->
       </div>
         <ul class="navbar nav" id="navbar-content">
           <li class="nav-item ">Passage du quizz</li>
@@ -32,7 +32,7 @@
     <!-- Content -->
 
     <!-- Footer -->
-      <div class="card">
+      <div class="card" style="background-color: #312121;color:rgb(241, 239, 238)">
         <div class="card-header">
             Contactez nous: n.fouque@outlook.fr <br>
             Made by David, Marc & Nicolas with Angular <br>
