--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/quizz/quizz.component.html
@@ -3,7 +3,7 @@
    <div class="row">
        <div class="col-12">
            <div class="quizz-container">
-                <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="color:#15232c;background-color: rgb(221, 149, 116);" id="navbar-quizz">
+                <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="color:#e0d5c7;background-color: rgb(197, 64, 64);" id="navbar-quizz">
                     <ul class="navbar nav" id="navbar-content">
                         <div class="col-3">
                             <li class="nav-item ">{{UserLastName}}</li>
@@ -13,16 +13,18 @@
                         </div>
                         <div class="col-3">
                             <li class="nav-item ">{{Technology}}</li>
+                        </div>                        
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <div class="col-12">
+                            <li class="nav-item" id="timer">{{Minutes}} minutes, {{Secondes}} secondes</li>
                         </div>
-                        <!-- <div class="col-3">
-                            <li class="nav-item">{{Minutes}}:{{Secondes}}</li>
-                        </div>                        -->
                     </ul>
                 </nav>
                 <div class="panel-group">               
-                             <!-- <app-questionsreponses >
+                             <app-questionsreponses >
 
-                            </app-questionsreponses> -->
+                            </app-questionsreponses>
                 </div>
            </div>    
        </div>
