--- a/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/questionsreponses/questionsreponses.component.html
+++ b/AppFilRougeLibrary/FilRouge.Angular/FilRouge/src/app/questionsreponses/questionsreponses.component.html
@@ -1,6 +1,13 @@
 <!-- <h4>{{ QuestionNumber }}Number :{{ QuestionContent }}Content</h4> -->
 <ngb-progressbar showValue="true" type="danger" [value]="50" height="2rem" [max]="100" [striped]="true" [animated]="true"></ngb-progressbar>
   <div class="panel panel-warning">
+      <nav class="navbar navbar-expand-sm|md|lg|-xl navbar-dark|light" style="text-align: center; color:rgb(241, 239, 238);background-color:#312121;" id="navbar-quizz">
+          <ul class="navbar nav" id="navbar-question">
+              <div class="col-3">
+                  <li class="nav-item ">{{QuestionContent}}ContentQuestion</li>
+              </div>                                                      
+          </ul>         
+      </nav>
     <app-reponses>
 
     </app-reponses>
